# geostatistic-course

./: .gitignore  README.md  pyproject.toml
notebooks/: main.ipynb  session_2.ipynb  session_3.ipynb
src/: config.py  main.py  session_2.py  session_3.py
