[project]
name = "geostatistic-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.1",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.8",
    "polars>=1.36.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
